[gd_scene load_steps=6 format=3 uid="uid://cpwmax3kf4sya"]

[ext_resource type="Script" path="res://game_scenes/shop_ui.gd" id="1_h3vta"]
[ext_resource type="Theme" uid="uid://6nk5w4vjdw2u" path="res://assets/theme.tres" id="2_7qdgd"]
[ext_resource type="Texture2D" uid="uid://6qfe580k3p6v" path="res://assets/faces/05.png" id="3_tma4l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e2ogw"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0qo35"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_h3vta")

[node name="ShopUI" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="ShopUI"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="ShopUI/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="ShopUI/HBoxContainer/PanelContainer"]
layout_mode = 2

[node name="InfoPanel" type="PanelContainer" parent="ShopUI/HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("2_7qdgd")
theme_override_styles/panel = SubResource("StyleBoxFlat_e2ogw")

[node name="MarginContainer" type="MarginContainer" parent="ShopUI/HBoxContainer/PanelContainer/VBoxContainer/InfoPanel"]
layout_mode = 2
theme = ExtResource("2_7qdgd")
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="ShopUI/HBoxContainer/PanelContainer/VBoxContainer/InfoPanel/MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="ShopUI/HBoxContainer/PanelContainer/VBoxContainer/InfoPanel/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_tma4l")

[node name="VSeparator" type="VSeparator" parent="ShopUI/HBoxContainer/PanelContainer/VBoxContainer/InfoPanel/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
theme_override_styles/separator = SubResource("StyleBoxFlat_0qo35")

[node name="VBoxContainer" type="VBoxContainer" parent="ShopUI/HBoxContainer/PanelContainer/VBoxContainer/InfoPanel/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="CustomerNameLabel" type="Label" parent="ShopUI/HBoxContainer/PanelContainer/VBoxContainer/InfoPanel/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Name"

[node name="AmountLabel" type="Label" parent="ShopUI/HBoxContainer/PanelContainer/VBoxContainer/InfoPanel/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Amount"

[node name="CustomerDebugger" type="Label" parent="ShopUI/HBoxContainer/PanelContainer/VBoxContainer/InfoPanel/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="StatsPanel" type="PanelContainer" parent="ShopUI/HBoxContainer"]
custom_minimum_size = Vector2(100, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 8
size_flags_stretch_ratio = 2.0

[node name="MarginContainer" type="MarginContainer" parent="ShopUI/HBoxContainer/StatsPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="ShopUI/HBoxContainer/StatsPanel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="BankLabel" type="Label" parent="ShopUI/HBoxContainer/StatsPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Bank: 0.00"

[node name="CashLabel" type="Label" parent="ShopUI/HBoxContainer/StatsPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Cash: 0.00"

[node name="ElectronicFeeLossLabel" type="Label" parent="ShopUI/HBoxContainer/StatsPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="CashFeeLossLabel" type="Label" parent="ShopUI/HBoxContainer/StatsPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="InsurancePremiumLabel" type="Label" parent="ShopUI/HBoxContainer/StatsPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Insurance Premium"

[node name="InsuranceExcessLabel" type="Label" parent="ShopUI/HBoxContainer/StatsPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="IncomeLossLabel" type="Label" parent="ShopUI/HBoxContainer/StatsPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="RobberyChanceLabel" type="Label" parent="ShopUI/HBoxContainer/StatsPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
